# statuses-mod

./: CMakeLists.txt  README.md  about.md  mod.json
src/: AppDelegateHook.cpp  Auth.cpp  Auth.h  CommentCellHook.cpp  CustomStatusLayer.cpp  CustomStatusLayer.hpp  GJLevelScoreCellHook.cpp  GJScoreCellHook.cpp  GJUserCellHook.cpp  LoadingOverlay.cpp  LoadingOverlay.hpp  OptionPicker.cpp  OptionPicker.hpp  ProfilePageHook.cpp  ServerListener.cpp  ServerListener.hpp  StatusChangeLayer.cpp  StatusChangeLayer.hpp  StatusIconNode.cpp  StatusIconNode.hpp  StatusManager.cpp  StatusManager.hpp  utils.cpp  utils.hpp
